message VectorBarrel{
    required string SrcDataSource = 1;
    required string SrcLayer = 2;
    required string DstDataSource = 3;
    required string DstLayer = 4;
    repeated int32 features = 5;

}

enum DataType{
    OK = 0;
    WRONG= 1;
}

message DataInfo{
    required DataType Type = 1; 
    required int32 DataIndex = 2;
    required VectorBarrel barrel = 3
}